--- a/index.html
+++ b/index.html
@@ -358,6 +358,19 @@
     alert('Please click the Spailã name at the bottom and please🙏 follow🥳 the Spailã innovation to get more🤩 ')
     
   </script>
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function(OneSignal) {
+    await OneSignal.init({
+      appId: "20620ba3-dd28-4fec-9a60-7ad3814eb293",
+      safari_web_id: "web.onesignal.auto.62a04992-e924-4258-8064-560c4d6dc347",
+      notifyButton: {
+        enable: true,
+      },
+    });
+  });
+</script>
 <!-- Elfsight AI Chatbot | Untitled AI Chatbot --> <script src="https://static.elfsight.com/platform/platform.js" async></script> 
   <div class="elfsight-app-96bdaaba-e5ed-4ad4-a8df-ec0e1637e6c6" data-elfsight-app-lazy></div>
 </body>
