--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         alert("Error with speech recognition: " + event.error);
       };
     });
-    alert('Please click the Spailã name at the bottom and please🙏 follow🥳 the Spailã innovation to get more🤩 ')
+    alert('Thank you so much to all students,teachers and supporters of Spailã for all what you have done for the Spailãpad.')
     
   </script>
   <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
@@ -371,7 +371,8 @@
     });
   });
 </script>
-<!-- Elfsight AI Chatbot | Untitled AI Chatbot --> <script src="https://static.elfsight.com/platform/platform.js" async></script> 
-  <div class="elfsight-app-96bdaaba-e5ed-4ad4-a8df-ec0e1637e6c6" data-elfsight-app-lazy></div>
+<!-- Elfsight AI Chatbot | Untitled AI Chatbot -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-07510c6d-7d86-441e-9251-a6cb8d9d8ae7" data-elfsight-app-lazy></div>
 </body>
 </html>
